# vecno-testnet

./: .gitignore  Cargo.toml  LICENSE  README.md  check  check.ps1  test
components/addressmanager/: Cargo.toml
components/addressmanager/src/: lib.rs  port_mapping_extender.rs
components/addressmanager/src/stores/: address_store.rs  banned_address_store.rs  mod.rs
components/connectionmanager/: Cargo.toml
components/connectionmanager/src/: lib.rs
consensus/: Cargo.toml
consensus/benches/: check_scripts.rs  hash_benchmarks.rs  parallel_muhash.rs
consensus/client/: Cargo.toml
consensus/client/src/: error.rs  hash.rs  header.rs  imports.rs  input.rs  lib.rs  outpoint.rs  output.rs  script.rs  sign.rs  signing.rs  transaction.rs  utils.rs  utxo.rs  vtx.rs
consensus/client/src/serializable/: mod.rs  numeric.rs  string.rs
consensus/core/: Cargo.toml
consensus/core/benches/: serde_benchmark.rs
consensus/core/src/: acceptance_data.rs  block.rs  blockhash.rs  blockstatus.rs  constants.rs  header.rs  lib.rs  merkle.rs  muhash.rs  network.rs  pruning.rs  subnets.rs  trusted.rs  tx.rs
consensus/core/src/api/: mod.rs
consensus/core/src/config/: bps.rs  constants.rs  genesis.rs  mod.rs  params.rs
consensus/core/src/errors/: block.rs  consensus.rs  pruning.rs  sync.rs  tx.rs
consensus/core/src/hashing/: header.rs  mod.rs  sighash.rs  tx.rs  wasm.rs
consensus/core/src/mass/: mod.rs
consensus/core/src/tx/: script_public_key.rs
consensus/core/src/utxo/: utxo_diff.rs
consensus/notify/: Cargo.toml
consensus/notify/src/: collector.rs  connection.rs  notification.rs  notifier.rs  root.rs  service.rs
consensus/pow/: Cargo.toml
consensus/pow/benches/: bench.rs
consensus/pow/src/: lib.rs  matrix.rs  mem_hash.rs  wasm.rs  xoshiro.rs
consensus/src/: config.rs  errors.rs  params.rs  test_helpers.rs
consensus/src/consensus/: cache_policy_builder.rs  ctl.rs  factory.rs  mod.rs  services.rs  storage.rs  test_consensus.rs  utxo_set_override.rs
consensus/src/constants/: mod.rs
consensus/src/model/services/: reachability.rs  relations.rs  statuses.rs
consensus/src/model/stores/: acceptance_data.rs  block_transactions.rs  block_window_cache.rs  children.rs  daa.rs  depth.rs  ghostdag.rs  headers.rs  headers_selected_tip.rs  mod.rs  past_pruning_points.rs  pruning.rs  pruning_utxoset.rs  reachability.rs  relations.rs  selected_chain.rs  statuses.rs  tips.rs  utxo_diffs.rs  utxo_multisets.rs  utxo_set.rs  virtual_state.rs
consensus/src/pipeline/: deps_manager.rs  mod.rs  monitor.rs
consensus/src/pipeline/body_processor/: body_validation_in_context.rs  body_validation_in_isolation.rs  processor.rs
consensus/src/processes/: Parallel Processing.md  block_depth.rs  coinbase.rs  difficulty.rs  mass.rs  parents_builder.rs  past_median_time.rs  pruning.rs  relations.rs  traversal_manager.rs  window.rs
consensus/wasm/: Cargo.toml
consensus/wasm/src/: error.rs  utils.rs
crypto/merkle/: Cargo.toml
crypto/merkle/src/: lib.rs
crypto/txscript/: Cargo.toml
crypto/txscript/errors/: Cargo.toml
crypto/txscript/examples/: kip-10.rs
crypto/txscript/src/: data_stack.rs  error.rs  lib.rs  script_builder.rs  script_class.rs  standard.rs
crypto/txscript/test-data/: script_tests.json
indexes/processor/: Cargo.toml
indexes/processor/src/: errors.rs  processor.rs  service.rs
indexes/utxoindex/: Cargo.toml
indexes/utxoindex/src/: index.rs  update_container.rs
mining/: Cargo.toml
mining/benches/: bench.rs
mining/errors/: Cargo.toml
mining/errors/src/: block_template.rs  mempool.rs
mining/src/: cache.rs  errors.rs  manager.rs  manager_tests.rs  monitor.rs
mining/src/block_template/: builder.rs  errors.rs  selector.rs
mining/src/mempool/: check_transaction_standard.rs  config.rs  errors.rs  handle_new_block_transactions.rs  mod.rs  populate_entries_and_try_validate.rs  remove_transaction.rs  replace_by_fee.rs  validate_and_insert_transaction.rs
mining/src/model/: candidate_tx.rs  mod.rs  owner_txs.rs  topological_sort.rs  tx_insert.rs
mining/src/testutils/: coinbase_mock.rs  consensus_mock.rs
notify/: Cargo.toml
notify/benches/: bench.rs
notify/src/: broadcaster.rs  collector.rs  lib.rs  listener.rs  notification.rs  notifier.rs  root.rs  scope.rs  subscriber.rs
notify/src/address/: mod.rs  tracker.rs
notify/src/subscription/: compounded.rs  context.rs  single.rs
protocol/flows/: Cargo.toml
protocol/flows/src/: flow_context.rs  flow_trait.rs  service.rs
protocol/p2p/: Cargo.toml
protocol/p2p/proto/: messages.proto  p2p.proto
protocol/p2p/src/: common.rs  echo.rs  handshake.rs  lib.rs
rothschild/: Cargo.toml
rothschild/benches/: bench.rs
rothschild/src/: main.rs
rpc/core/: Cargo.toml
rpc/core/src/: error.rs  lib.rs
rpc/grpc/core/: Cargo.toml
rpc/grpc/server/: Cargo.toml
rpc/service/: Cargo.toml
rpc/service/src/: collector.rs  service.rs
rpc/wrpc/proxy/: Cargo.toml
rpc/wrpc/server/: Cargo.toml
simpa/: Cargo.toml
simpa/src/: main.rs
simpa/src/simulator/: miner.rs  network.rs
testing/integration/: Cargo.toml
testing/integration/src/: consensus_integration_tests.rs  consensus_pipeline_tests.rs  daemon_integration_tests.rs  mempool_benchmarks.rs  rpc_tests.rs  subscribe_benchmarks.rs
vecnod/: Cargo.toml  README.md
vecnod/src/: args.rs  daemon.rs  main.rs
wallet/core/: Cargo.toml
wallet/core/src/: derivation.rs  deterministic.rs  error.rs  events.rs  imports.rs  lib.rs  message.rs  metrics.rs  prelude.rs  rpc.rs  settings.rs  utils.rs
wasm/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-docs  build-node  build-node-dev  build-release  build-vecno-sdk.ps1  build-web  build-web-dev  package-sizes.js
wasm/core/: Cargo.toml
wasm/examples/: init.js  package.json
wasm/examples/browser-extension/: index.html  server.js
wasm/examples/web/: browser-extension.html  get-block-dag-info.html  get-server-info.html  index.html  subscribe-block-added.html  subscribe-daa-changed.html  utxo-context.html  xpub.html
wasm/npm/: README.md  index.js  package.json
wasm/src/: lib.rs  version.rs
(+506 files in other folders)
