[package]
name = "vecno-consensus"
description = "Vecno consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
vecno-consensus-core.workspace = true
vecno-consensus-notify.workspace = true
vecno-consensusmanager.workspace = true
vecno-core.workspace = true
vecno-database.workspace = true
vecno-hashes.workspace = true
vecno-math.workspace = true
vecno-merkle.workspace = true
vecno-muhash.workspace = true
vecno-notify.workspace = true
vecno-pow.workspace = true
vecno-txscript.workspace = true
vecno-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
vecno-txscript-errors.workspace = true

[[bench]]
name = "hash_benchmarks"
harness = false

[features]
html_reports = []
devnet-prealloc = ["vecno-consensus-core/devnet-prealloc"]
