[package]
name = "vecno-mining"
description = "Vecno mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vecno-addresses.workspace = true
vecno-consensus-core.workspace = true
vecno-consensusmanager.workspace = true
vecno-core.workspace = true
vecno-hashes.workspace = true
vecno-mining-errors.workspace = true
vecno-muhash.workspace = true
vecno-txscript.workspace = true
vecno-utils.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ] }

[dev-dependencies]
vecno-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false
