[package]
name = "simpa"
description = "Vecno Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vecno-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first 
vecno-consensus-core.workspace = true
vecno-consensus-notify.workspace = true
vecno-consensus.workspace = true
vecno-core.workspace = true
vecno-database.workspace = true
vecno-hashes.workspace = true
vecno-perf-monitor.workspace = true
vecno-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "vecno-alloc/heap"]
