[package]
name = "vecno-addressmanager"
description = "Vecno address manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
borsh.workspace = true
igd-next.workspace = true
itertools.workspace = true
vecno-consensus-core.workspace = true
vecno-core.workspace = true
vecno-database.workspace = true
vecno-utils.workspace = true
local-ip-address.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
statrs.workspace = true
statest.workspace = true
