[package]
name = "vecno-consensus-notify"
description = "Vecno consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
vecno-consensus-core.workspace = true
vecno-core.workspace = true
vecno-hashes.workspace = true
vecno-notify.workspace = true
vecno-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true
