[package]
name = "vecno-consensus-wasm"
description = "Vecno consensus core WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []
wasm32-types = []

[dependencies]
vecno-consensus-core.workspace = true
vecno-consensus-client.workspace = true
vecno-addresses.workspace = true
vecno-txscript.workspace = true
vecno-hashes.workspace = true
vecno-utils.workspace = true

cfg-if.workspace = true
faster-hex.workspace = true
js-sys.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true

workflow-wasm.workspace = true
workflow-log.workspace = true

[lints]
workspace = true
