[package]
name = "vecno-index-processor"
description = "Vecno index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vecno-consensus-core.workspace = true
vecno-consensus-notify.workspace = true
vecno-consensusmanager.workspace = true
vecno-core.workspace = true
vecno-database.workspace = true
vecno-hashes.workspace = true
vecno-index-core.workspace = true
vecno-notify.workspace = true
vecno-utils.workspace = true
vecno-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
vecno-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}