[package]
name = "vecno-utxoindex"
description = "Vecno UTXO index"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
vecno-consensus-core.workspace = true
vecno-consensusmanager.workspace = true
vecno-core.workspace = true
vecno-database.workspace = true
vecno-hashes.workspace = true
vecno-index-core.workspace = true
vecno-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
vecno-consensus.workspace = true
rand = { workspace = true, features = ["small_rng"] }
