[package]
name = "vecno-p2p-lib"
description = "Vecno p2p library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "./src/lib.rs"

[[bin]]
name = "vecno_p2p_client"
path = "./src/bin/client.rs"

[[bin]]
name = "vecno_p2p_server"
path = "./src/bin/server.rs"

[dependencies]
vecno-core.workspace = true
vecno-consensus-core.workspace = true
vecno-mining-errors.workspace = true
vecno-hashes.workspace = true
vecno-math.workspace = true
vecno-utils.workspace = true
vecno-utils-tower.workspace = true

borsh.workspace = true
ctrlc.workspace = true
futures = { workspace = true, features = ["alloc"] }
h2.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
prost.workspace = true
rand.workspace = true
seqlock.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["tls", "gzip"] }
uuid.workspace = true

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }

[dev-dependencies]
hex.workspace = true
