[package]
name = "vecno-rpc-service"
description = "Vecno RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vecno-addresses.workspace = true
vecno-consensus-core.workspace = true
vecno-consensus-notify.workspace = true
vecno-consensusmanager.workspace = true
vecno-core.workspace = true
vecno-hashes.workspace = true
vecno-index-core.workspace = true
vecno-math.workspace = true
vecno-mining.workspace = true
vecno-notify.workspace = true
vecno-p2p-flows.workspace = true
vecno-p2p-lib.workspace = true
vecno-perf-monitor.workspace = true
vecno-rpc-core.workspace = true
vecno-txscript.workspace = true
vecno-utils.workspace = true
vecno-utils-tower.workspace = true
vecno-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true
