[package]
name = "vecno-grpc-server"
description = "Vecno gRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vecno-consensus-core.workspace = true
vecno-core.workspace = true
vecno-grpc-core.workspace = true
vecno-notify.workspace = true
vecno-rpc-core.workspace = true
vecno-rpc-macros.workspace = true
vecno-rpc-service.workspace = true
vecno-utils-tower.workspace = true
vecno-utils.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["gzip"] }
triggered.workspace = true
uuid.workspace = true
rustls.workspace = true

[dev-dependencies]
vecno-grpc-client.workspace = true
