[package]
name = "vecno-wrpc-proxy"
description = "Vecno wRPC to gRPC proxy"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
vecno-consensus-core.workspace = true
vecno-grpc-client.workspace = true
vecno-rpc-core.workspace = true
vecno-rpc-macros.workspace = true
vecno-wrpc-server.workspace = true
num_cpus.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true

[package.metadata.emanate.build]
folder = "setup"
