[package]
name = "vecno-wrpc-server"
description = "Vecno wRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait.workspace = true
borsh = { workspace = true, features = ["rc"] }
futures.workspace = true
vecno-consensus-core.workspace = true
vecno-core.workspace = true
vecno-grpc-client.workspace = true
vecno-notify.workspace = true
vecno-rpc-core.workspace = true
vecno-rpc-macros.workspace = true
vecno-rpc-service.workspace = true
vecno-utils.workspace = true
log.workspace = true
num_cpus.workspace = true
paste.workspace = true
serde = { workspace = true, features = ["rc"] }
thiserror.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
workflow-serializer.workspace = true
rustls.workspace = true