[package]
name = "vecno-wrpc-simple-client-example"
description = "Vecno wRPC simple client example"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
vecno-rpc-core.workspace = true
vecno-wrpc-client.workspace = true
tokio.workspace = true

