[package]
name = "vecno-wrpc-example-subscriber"
description = "Vecno wRPC subscription example"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
vecno-consensus-core.workspace = true
vecno-rpc-core.workspace = true
vecno-wrpc-client.workspace = true
vecno-notify.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
ctrlc.workspace = true
